--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
+          <mainClass>ar.edu.utn.frbb.tup.Application</mainClass>
           <source>17</source>
           <target>17</target>
         </configuration>
